# maia3

./: .gitignore  LOCAL_SETUP.md  README.md  pyproject.toml  requirements.txt
code/: dataset.py  models.py  uci.py  utils.py
configs/: example.yaml  maia3-23m.yaml  maia3-3m.yaml  maia3-5m.yaml  maia3-79m.yaml
data/: download_and_rename_datasets.sh
maia3/: __init__.py  __main__.py  config.py  dataset.py  infer.py  model_registry.py  models.py  preprocess.py  train.py  uci.py  utils.py  validate.py
scripts/: smoke_test.py
